# pyjtalk

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  test.py
pyjtalk/: __init__.py  __main__.py  config.py  exceptions.py  jtalker.py
script/: publish.sh
